test/types/range/lydia/badRange-string-multi.good
badRange-string-multi.chpl:1: In function 'main':
badRange-string-multi.chpl:2: error: lower bound of param for loop must be an int, uint, or bool
badRange-string-multi.chpl:2: error: upper bound of param for loop must be an int, uint, or bool
badRange-string-multi.chpl:2: error: lower bound and stride of param for loop expected to be of the same type
badRange-string-multi.chpl:2: error: upper bound and stride of param for loop expected to be of the same type
