test/types/range/lydia/badRange-string-multi.chpl
proc main() {
  for param i in "".."" {
    writeln(i);
  }
}
